env loop setting works

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -272,7 +272,7 @@
 				<tr>
 					<td>1</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[1]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[1]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -301,11 +301,11 @@
 					<td rowspan="16" style="border-left:1px solid #666;padding:10px;">
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[1]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[1]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
-							<option value="S">S-&gt;</option>
 							<option value="R">R-&gt;</option>
+							<option value="S">S-&gt;</option>
 						</select>
 					</td>
 					<td class="val">
@@ -332,11 +332,11 @@
 				<tr>
 					<td>2</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[2]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[2]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
-							<option value="S">S-&gt;</option>
 							<option value="R">R-&gt;</option>
+							<option value="S">S-&gt;</option>
 						</select>
 					</td>
 					<td class="val">
@@ -360,7 +360,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[2]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[2]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -391,7 +391,7 @@
 				<tr>
 					<td>3</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[3]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[3]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -419,7 +419,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[3]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[3]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -450,7 +450,7 @@
 				<tr>
 					<td>4</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[4]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[4]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -478,7 +478,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[4]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[4]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -509,7 +509,7 @@
 				<tr>
 					<td>5</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[5]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[5]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -537,7 +537,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[5]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[5]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -568,7 +568,7 @@
 				<tr>
 					<td>6</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[6]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[6]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -596,7 +596,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[6]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[6]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -627,7 +627,7 @@
 				<tr>
 					<td>7</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[7]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[7]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -655,7 +655,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[7]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[7]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -686,7 +686,7 @@
 				<tr>
 					<td>8</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[8]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[8]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -714,7 +714,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[8]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[8]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -745,7 +745,7 @@
 				<tr>
 					<td>9</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[9]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[9]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -773,7 +773,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[9]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[9]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -804,7 +804,7 @@
 				<tr>
 					<td>10</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[10]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[10]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -832,7 +832,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[10]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[10]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -863,7 +863,7 @@
 				<tr>
 					<td>11</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[11]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[11]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -891,7 +891,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[11]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[11]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -922,7 +922,7 @@
 				<tr>
 					<td>12</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[12]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[12]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -950,7 +950,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[12]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[12]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -981,7 +981,7 @@
 				<tr>
 					<td>13</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[13]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[13]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -1009,7 +1009,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[13]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[13]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -1040,7 +1040,7 @@
 				<tr>
 					<td>14</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[14]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[14]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -1068,7 +1068,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[14]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[14]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -1099,7 +1099,7 @@
 				<tr>
 					<td>15</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[15]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[15]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -1127,7 +1127,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[15]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[15]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -1158,7 +1158,7 @@
 				<tr>
 					<td>16</td>
 					<td class="val">
-						<select class="vceEdit" id="envFreqLoop[16]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envFreqLoop[16]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
@@ -1186,7 +1186,7 @@
 
 
 					<td class="val">
-						<select class="vceEdit" id="envAmpLoop[16]" onchange="viewVCE_envs.onchange(this)" disabled>
+						<select class="vceEdit" id="envAmpLoop[16]" onchange="viewVCE_envs.onchangeLoop(this)" disabled>
 							<option value=""></option>
 							<option value="L">L-&gt;</option>
 							<option value="S">S-&gt;</option>
