type1 env accel editable

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -1213,6 +1213,21 @@
 					<td class="val total"> <span id="envAmpTotUpTime[16]" /> </td>
 					<td>16</td>
 				</tr>
+				<tr class="type1accel">
+					<td colspan="8" >
+						<div style="margin-top: 5px" class="Freq">
+							Accel Low:&nbsp;&nbsp;<div class="spinwrapper"><input id="accelFreqLow" type='text' min=0 max=127 class="vceEdit vceNum spinPLAIN" onchange=' viewVCE_envs.onchangeEnvAccel(this)' /></div>
+							&nbsp;Up:&nbsp;&nbsp;<div class="spinwrapper"><input id="accelFreqUp" type='text' min=0 max=127 class="vceEdit vceNum spinPLAIN" onchange='viewVCE_envs.onchangeEnvAccel(this)' /></div>
+						</div>
+					</td>
+					<td colspan="8" >
+						<div style="margin-top: 5px;" class="Amp">
+							Accel Low:&nbsp;&nbsp;<div class="spinwrapper"><input id="accelAmpLow" type='text' min=0 max=127 class="vceEdit vceNum spinPLAIN" onchange=' viewVCE_envs.onchangeEnvAccel(this)' /></div>
+							&nbsp;Up:&nbsp;&nbsp;<div class="spinwrapper"><input id="accelAmpUp" type='text' min=0 max=127 class="vceEdit vceNum spinPLAIN" onchange='viewVCE_envs.onchangeEnvAccel(this)' /></div>
+						</div>
+					</td>
+
+				</tr>
 				<tr class="listplusminus">
 					<td colspan="8">
 						<div style="margin-top: 5px; float: left;">
