throttle via lodash debounce

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -16,6 +16,8 @@
 	<script src="static/js/bootstrap.min.js"></script>
 	<script src="static/js/Chart.bundle.min.js"></script>
 
+	<script src="static/js/lodash-4.17.15.js"></script>
+
 	<script src="static/js/index.js"></script>
 	<script src="static/js/debug.js"></script>
 	<script src="static/js/viewVCE.js"></script>
