voice tab edit tests

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -35,7 +35,7 @@
 			<option value="8">(1~2~3~4) + (1~2~3~5) + (1~2~3~6) + (1~2~3~7) + (1~2~3~8)</option>
 			<option value="9">((1~2+3)~4) + ((1~2+3)~5) + ((1~2+3)~6) + ((1~2+3)~7) + ((1~2+3)~8)</option>
 		</select>
-		<table style="width:100%">
+		<table id="voiceOscTable" style="width:100%">
 			<thead>
 				<tr>
 					<th>Osc</th>
@@ -86,7 +86,7 @@
 
 		<br><br>
 
-		<table style="width:100%">
+		<table id="voiceParamTable" style="width:100%">
 			<tr>
 				<td>
 					<table>
