env and voice tab tests

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -1234,14 +1234,14 @@
 				<tr class="listplusminus">
 					<td colspan="8">
 						<div style="margin-top: 5px; float: left;">
-							<input type='button' value='-' onclick=' viewVCE_envs.changeEnvPoints("freq", -1)' />
-							<input type='button' value='+' onclick='viewVCE_envs.changeEnvPoints("freq", 1)' />
+							<input id="delFreqPoint" type='button' value='-' onclick=' viewVCE_envs.changeEnvPoints("freq", -1)' />
+							<input id="addFreqPoint" type='button' value='+' onclick='viewVCE_envs.changeEnvPoints("freq", 1)' />
 						</div>
 					</td>
 					<td colspan="8">
 						<div style="margin-top: 5px; float: left;">
-							<input type='button' value='-' onclick=' viewVCE_envs.changeEnvPoints("amp", -1)' />
-							<input type='button' value='+' onclick='viewVCE_envs.changeEnvPoints("amp", 1)' />
+							<input id="delAmpPoint" type='button' value='-' onclick=' viewVCE_envs.changeEnvPoints("amp", -1)' />
+							<input id="addAmpPoint" type='button' value='+' onclick='viewVCE_envs.changeEnvPoints("amp", 1)' />
 						</div>
 					</td>
 				</tr>
