save VCE and confirm dialogs

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -139,8 +139,9 @@ TEST a "more button" design:
 						<div class="dropdown-content" id="loadSaveDropdown-content">
 							<a href="#" onclick="index.saveSYNDialog();">Save Synergy State (SYN)</a>
 							<a href="#" onclick="index.loadSYNDialog();">Load Synergy State (SYN)</a>
-							<a href="#" onclick="index.loadCRTDialog();">Load Cartridge file (CRT)</a>
+							<a href="#" onclick="index.loadCRTDialog();" id="loadCRTMenuItem">Load Cartridge file (CRT)</a>
 							<a href="#" onclick="index.loadVCEDialog();">Load Voice file (VCE)</a>
+							<a href="#" onclick="index.saveVCEDialog();"" class="disabled" id="saveVCEMenuItem">Save Voice file (VCE)</a>
 						</div>
 					</div>
 
