--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -126,6 +126,22 @@ TEST a "more button" design:
 					</div>
 					<div class="headerSeparator p-2"></div>
 
+					<div class="navbar-text dropdown" style="width:30em;">
+						<table onclick="index.dropdownMenu('connectDropdown-content');" class="dropbtn">
+							<tr>
+								<td class="centered"><img id="connectButtonImg" src="static/images/grey-button-off-full.png" height="30">
+								</td>
+							</tr>
+							<tr>
+								<td class="centered"><span class="buttonText">Connect</span></td>
+							</tr>
+						</table>
+						<div class="dropdown-content" id="connectDropdown-content">
+							<a href="#" onclick="index.connectToSynergy();">Connect to Synergy</a>
+							<a href="#" onclick="index.disableVRAM();" id="disableVRAMMenuItem">Disable Synergy VRAM</a>
+							<a href="#" onclick="index.viewDiag();">Serial Diagnostics</a>
+						</div>
+					</div>
 
 					<div class="navbar-text dropdown" style="width:30em;">
 						<table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
@@ -174,22 +190,6 @@ TEST a "more button" design:
 						</div>
 					</div>
 
-					<div class="navbar-text dropdown" style="width:30em;">
-						<table onclick="index.dropdownMenu('connectDropdown-content');" class="dropbtn">
-							<tr>
-								<td class="centered"><img src="static/images/grey-button-off-full.png" height="30">
-								</td>
-							</tr>
-							<tr>
-								<td class="centered"><span class="buttonText">Connect</span></td>
-							</tr>
-						</table>
-						<div class="dropdown-content" id="connectDropdown-content">
-							<a href="#" onclick="index.connectToSynergy();">Connect to Synergy</a>
-							<a href="#" onclick="index.disableVRAM();">Disable Synergy VRAM</a>
-							<a href="#" onclick="index.viewDiag();">Serial Diagnostics</a>
-						</div>
-					</div>
 
 
 					<div class="flex-grow-1 p-2"></div>
