--- a/resources/app/viewCRT.html
+++ b/resources/app/viewCRT.html
@@ -1,9 +1,14 @@
 <table onclick="index.loadCRT(crt_name,crt_path);" class="dropbtn">
-  <tr><td class="centered"><img src="static/images/red-button-off-full.png" height="30"></td></tr>
-  <tr><td class="centered"><span class="buttonText">Load CRT</span></td></tr>
-</table>
-
-
+	<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="30"></td></tr>
+	<tr><td class="centered"><span class="buttonText">Edit CRT</span></td></tr>
+  </table>
+  
+  <table onclick="index.loadCRT(crt_name,crt_path);" class="dropbtn">
+	<tr><td class="centered"><img src="static/images/red-button-off-full.png" height="30"></td></tr>
+	<tr><td class="centered"><span class="buttonText">Load CRT</span></td></tr>
+  </table>
+  
+	
 <br><br>
 <span class="centered" id="crt_path"></span>
 <br><br>
