--- a/resources/app/viewCRT.html
+++ b/resources/app/viewCRT.html
@@ -1,14 +1,48 @@
-<table onclick="index.loadCRT(crt_name,crt_path);" class="dropbtn">
-	<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="30"></td></tr>
-	<tr><td class="centered"><span class="buttonText">Edit CRT</span></td></tr>
-  </table>
-  
-  <table onclick="index.loadCRT(crt_name,crt_path);" class="dropbtn">
-	<tr><td class="centered"><img src="static/images/red-button-off-full.png" height="30"></td></tr>
-	<tr><td class="centered"><span class="buttonText">Load CRT</span></td></tr>
-  </table>
-  
-	
+<div class="row flex-shrink-0 navbar" style="width:10;">
+	<div class="subHeaderContainer">
+		<div class="header d-flex vertical-align-center">
+			<div class="flex-grow-1 p-2"></div>
+
+			<div class="navbar-text" style="width:30em;">
+				<table onclick="viewCRT.editCRT(crt_name,crt_path);" class="dropbtn">
+					<tr>
+						<td class="centered"><img id="editCRTButtonImg" src="static/images/red-button-off-full.png"
+								height="30"></td>
+					</tr>
+					<tr>
+						<td class="centered"><span class="buttonText">Edit CRT</span></td>
+					</tr>
+				</table>
+			</div>
+
+			<div id="saveCRTButton" style="display: none;" class="navbar-text" style="width:30em;">
+				<table onclick="viewCRT.saveCRT(crt_name,crt_path);"
+					class="dropbtn">
+					<tr>
+						<td class="centered"><img src="static/images/grey-button-off-full.png" height="30"></td>
+					</tr>
+					<tr>
+						<td class="centered"><span class="buttonText">Save CRT</span></td>
+					</tr>
+				</table>
+			</div>
+
+			<div class="navbar-text" style="width:30em;">
+				<table onclick="viewCRT.loadCRT(crt_name,crt_path);" class="dropbtn">
+					<tr>
+						<td class="centered"><img src="static/images/grey-button-off-full.png" height="30"></td>
+					</tr>
+					<tr>
+						<td class="centered"><span class="buttonText">Load CRT</span></td>
+					</tr>
+				</table>
+			</div>
+			<div class="flex-grow-1 p-2"></div>
+
+		</div>
+	</div>
+</div>
+
 <br><br>
 <span class="centered" id="crt_path"></span>
 <br><br>
@@ -17,133 +51,132 @@
 
 
 <div id="crt_tables" class="row">
-  <div class="col">
-    
-    <!-- Old School - table layout -->
-    <table class="table table-sm">
-      <thead>
-	<tr>
-	  <th scope="col">Slot</th>
-	  <th scope="col">Voice Name</th>
-	</tr>
-      </thead>
-      <tbody>
-	<tr>
-	  <th scope="row">1</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_1"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">2</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_2"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">3</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_3"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">4</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_4"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">5</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_5"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">6</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_6"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">7</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_7"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">8</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_8"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">9</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_9"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">10</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_10"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">11</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_11"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">12</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_12"></span></td>
-	</tr>
-      </tbody>
-    </table>
-  </div>
-  
-  
-  <div class="col">
-    
-    <!-- Old School - table layout -->
-    <table class="table table-sm">
-      <thead>
-	<tr>
-	  <th scope="col">Slot</th>
-	  <th scope="col">Voice Name</th>
-	</tr>
-      </thead>
-      <tbody>
-	
-	<tr>
-	  <th scope="row">13</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_13"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">14</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_14"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">15</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_15"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">16</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_16"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">17</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_17"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">18</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_18"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">19</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_19"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">20</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_20"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">21</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_21"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">22</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_22"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">23</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_23"></span></td>
-	</tr>
-	<tr>
-	  <th scope="row">24</th>
-	  <td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_24"></span></td>
-	</tr>
-      </tbody>
-  </div>
+	<div class="col">
+
+		<!-- Old School - table layout -->
+		<table class="table table-sm">
+			<thead>
+				<tr>
+					<th scope="col">Slot</th>
+					<th scope="col">Voice Name</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th scope="row">1</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_1"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">2</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_2"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">3</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_3"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">4</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_4"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">5</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_5"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">6</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_6"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">7</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_7"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">8</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_8"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">9</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_9"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">10</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_10"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">11</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_11"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">12</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_12"></span></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
+
+	<div class="col">
+
+		<!-- Old School - table layout -->
+		<table class="table table-sm">
+			<thead>
+				<tr>
+					<th scope="col">Slot</th>
+					<th scope="col">Voice Name</th>
+				</tr>
+			</thead>
+			<tbody>
+
+				<tr>
+					<th scope="row">13</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_13"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">14</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_14"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">15</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_15"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">16</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_16"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">17</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_17"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">18</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_18"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">19</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_19"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">20</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_20"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">21</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_21"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">22</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_22"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">23</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_23"></span></td>
+				</tr>
+				<tr>
+					<th scope="row">24</th>
+					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_24"></span></td>
+				</tr>
+			</tbody>
+	</div>
 </div>
 
 </table>
-
